add linkedin, new styles

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
                 </div>
             </div>
             <h1>Clark Galgo</h1>
-            <div class="slogan">programmer</div>
+            <div class="slogan">PROGRAMMER</div>
             <hr />
             <div class="footer">
                 <a href="https://used.com.ph"> used ph</a> |
                 <a href="https://dev-engine.net">about me</a> | 
                 <a href="https://blog.dev-engine.net">my blog</a> |
                 <a href="https://fb.me/clark.galgo" class="fb"><span class="fab fa-facebook-square"></span></a> |
+                <a href="https://ph.linkedin.com/in/clarkgalgo" class="in"><span class="fab fa-linkedin"></span></a> | 
                 <a href="https://github.com/clark21" class="git"><span class="fab fa-github-square"></span></a>
             </div>
             <div class="all-right">
