--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link type="text/css" rel="stylesheet" href="/assets/bootstrap/dist/css/bootstrap.min.css" />
         <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Open+Sans+Condensed:300|News+Cycle|Comfortaa" />
         <link type="text/css" rel="stylesheet" href="/css/styles.css" />
+        <link rel="icon shortcut" type="image/x-ico" href="/favicon.ico" />
         <script type="text/javascript" src="/assets/jquery/dist/jquery.min.js"></script>
 		<meta name="HandheldFriendly" content="true">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
