added animation with resume page

--- a/index.html
+++ b/index.html
@@ -19,20 +19,84 @@
                     <img src="/images/profile.jpg" />
                 </div>
             </div>
-            <h1>Clark Galgo</h1>
-            <div class="slogan">PROGRAMMER</div>
-            <hr />
-            <div class="footer">
-                <a href="https://used.com.ph"> used ph</a> |
-                <a href="https://dev-engine.net">about me</a> | 
-                <a href="https://blog.dev-engine.net">my blog</a> |
-                <a href="https://fb.me/clark.galgo" class="fb"><span class="fab fa-facebook-square"></span></a> |
-                <a href="https://ph.linkedin.com/in/clarkgalgo" class="in"><span class="fab fa-linkedin"></span></a> | 
-                <a href="https://github.com/clark21" class="git"><span class="fab fa-github-square"></span></a>
+            <div class="profile-info">
+                <h1>Clark Galgo</h1>
+                <div class="slogan">FULL STACK DEVELOPER</div>
+                <hr />
+                <div class="footer">
+                    <a href="https://used.com.ph"> used ph</a> |
+                    <a href="https://dev-engine.net">about me</a> | 
+                    <a href="https://blog.dev-engine.net">my blog</a> |
+                    <a href="https://fb.me/clark.galgo" class="fb"><span class="fab fa-facebook-square"></span></a> |
+                    <a href="https://ph.linkedin.com/in/clarkgalgo" class="in"><span class="fab fa-linkedin"></span></a> | 
+                    <a href="https://github.com/clark21" class="git"><span class="fab fa-github-square"></span></a>
+                </div>
+            </div>
+            <div class="me">
+                <h2>About</h2>
+                <ul>
+                    <li>From: <span>Bohol, Philippines</span></li>
+                    <li>Date of Birth: <span>Feb 16, 1990</span></li>
+                    <li>Years of experience: <span>Since 2010</span></li>
+                    <li>Contact: <span>clark [at] dev-engine [dot] net</span></li>
+                    <li>Current Address: <span>Metro Manila</span></li>
+                </ul>
+                <hr />
+                <h2>What I Know</h2>
+                <ul>
+                    <li>PHP</li>
+                    <li>nodeJS / Javascript</li>
+                    <li>Python</li>
+                    <li>MySQL</li>
+                    <li>HTML, CSS</li>
+                    <li>Apache, Nginx</li>
+                    <li>Apache Solr, Elasticsearch</li>
+                    <li>RabbitMQ</li>
+                    <li>Supervisord</li>
+                    <li>mongodb, redis</li>
+                    <li>AWS, Rackspace, Azure, Linode</li>
+                    <li>Linux</li>
+                    <li>GIT, SVN</li>
+                </ul>
+                <hr />
+                <h2>What I do</h2>
+                <p>My work usually involves setting up  server architechtures from ground up with regional redundancy, database clusters / master and slave replications, develop web, mobile and desktop applications. Check out some of my projects</p>
+                <ul>
+                    <li>Used PH &mdash; <em>https://used.com.ph</em></li>
+                    <li>Theshop &mdash; <em>https://theshop.ph</em></li>
+                    <li>Galleon &mdash; <em>https://www.galleon.ph</em></li>
+                    <li>Jobayan &mdash; <em>https://www.jobayan.com</em></li>
+                    <li>Globe Connect API Wrapper for PHP, NodeJS and Python &mdash; <em>https://github.com/globelabs</em></li>
+                    <li>LBC Over The Counter Payment (OTC)</li>
+                    <li>Iristext &mdash; <em>https://www.iristext.com</em></li>
+                </ul>
+                <hr />
+                <h2>Employment</h2>
+                <div class="employment">
+                    <div><strong>Web Developer / Web Master</strong></div>
+                    <div><em>Base One Media</em></div>
+                    <div><span>2010 - 2012</span></div>
+                </div>
+                <br />
+                <div class="employment">
+                    <div><strong>Senior Programmer</strong></div>
+                    <div><em>Openovate Labs</em></div>
+                    <div><span>2012 - Present</span></div>
+                </div>
+                <hr />
             </div>
             <div class="all-right">
                 <span>&copy; 2018</span>
             </div>
         </div>
+        <div class="side-menu">
+            <div><a href="#" class="home-back"><span class="fa fa-home"></span> Home</a></div>
+            <div><a href="https://used.com.ph"><img src="https://used.com.ph/favicon.ico" width=14 /> Used PH</a></div>
+            <div><a class="rss" href="https://blog.dev-engine.net"><span class="fa fa-rss-square"></span> My Blog</a></div>
+            <div><a class="fb" href="https://fb.me/clark.galgo"><span class="fab fa-facebook-square"></span> Facebook</a></div>
+            <div><a class="in" href="https://ph.linkedin.com/in/clarkgalgo"><span class="fab fa-linkedin"></span> Linkedin</a></div>
+            <div><a class="git" href="https://github.com/clark21"><span class="fab fa-github-square"></span> Github</a></div>
+        </div>
+        <script type="text/javascript" src="/js/script.js"></script>
     </body>
 </html>
