side menu for mobile phones

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
             <div><a class="in" href="https://ph.linkedin.com/in/clarkgalgo"><span class="fab fa-linkedin"></span> Linkedin</a></div>
             <div><a class="git" href="https://github.com/clark21"><span class="fab fa-github-square"></span> Github</a></div>
         </div>
+        <div class="drawer">
+            <span class="fa fa-align-justify"></span>
+        </div>
+        
         <script type="text/javascript" src="/js/script.js"></script>
     </body>
 </html>
