--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <a href="https://used.com.ph"> used ph</a> |
                     <a href="#" class="about">about me</a> | 
                     <a href="https://blog.dev-engine.net">my blog</a> |
+                    <a href="https://m.me/clark.galgo" target="_blank" class="msgr"><span class="fab fa-facebook-messenger"></span></a> |
                     <a href="https://fb.me/clark.galgo" class="fb"><span class="fab fa-facebook-square"></span></a> |
                     <a href="https://ph.linkedin.com/in/clarkgalgo" class="in"><span class="fab fa-linkedin"></span></a> | 
                     <a href="https://github.com/clark21" class="git"><span class="fab fa-github-square"></span></a>
@@ -91,6 +92,7 @@
         </div>
         <div class="side-menu">
             <div><a href="#" class="home-back"><span class="fa fa-home"></span> Home</a></div>
+            <div><a href="https://m.me/clark.galgo" class="msgr" target="_blank"><span class="fab fa-facebook-messenger"></span> Message me</a></div>
             <div><a href="https://used.com.ph"><img src="https://used.com.ph/favicon.ico" width=14 /> Used PH</a></div>
             <div><a class="rss" href="https://blog.dev-engine.net"><span class="fa fa-rss-square"></span> My Blog</a></div>
             <div><a class="fb" href="https://fb.me/clark.galgo"><span class="fab fa-facebook-square"></span> Facebook</a></div>
