--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <li>Theshop &mdash; <em>https://theshop.ph</em></li>
                     <li>Galleon &mdash; <em>https://www.galleon.ph</em></li>
                     <li>Jobayan &mdash; <em>https://www.jobayan.com</em></li>
+                    <li>Dealcha &mdash; <em>https://dealcha.com/</em></li>
                     <li>Globe Connect API Wrapper for PHP, NodeJS and Python &mdash; <em>https://github.com/globelabs</em></li>
                     <li>LBC Over The Counter Payment (OTC)</li>
                     <li>Iristext &mdash; <em>https://www.iristext.com</em></li>
