--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
                 <div class="employment">
                     <div><strong>Senior Programmer</strong></div>
                     <div><em>Openovate Labs</em></div>
-                    <div><span>2012 - Present</span></div>
+                    <div><span>2012 - 2021</span></div>
+                </div>
+                <hr />
+                <div class="employment">
+                    <div><strong>Fullstack Developer</strong></div>
+                    <div><em>Shoppable</em></div>
+                    <div><span>2022 - Present</span></div>
                 </div>
                 <hr />
             </div>
@@ -95,7 +101,7 @@
         <div class="side-menu">
             <div><a href="#" class="home-back"><span class="fa fa-home"></span> Home</a></div>
             <div><a href="https://m.me/clark.galgo" class="msgr" target="_blank"><span class="fab fa-facebook-messenger"></span> Message me</a></div>
-            <div><a href="https://used.com.ph"><img src="https://used.com.ph/favicon.ico" width=14 /> Used PH</a></div>
+            <!--<div><a href="https://used.com.ph"><img src="https://used.com.ph/favicon.ico" width=14 /> Used PH</a></div>-->
             <div><a class="rss" href="https://blog.dev-engine.net"><span class="fa fa-rss-square"></span> My Blog</a></div>
             <div><a class="fb" href="https://fb.me/clark.galgo"><span class="fab fa-facebook-square"></span> Facebook</a></div>
             <div><a class="in" href="https://ph.linkedin.com/in/clarkgalgo"><span class="fab fa-linkedin"></span> Linkedin</a></div>
