--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="slogan">FULL STACK DEVELOPER</div>
                 <hr />
                 <div class="footer">
-                    <a href="https://used.com.ph"> used ph</a> |
+                    <!--<a href="https://used.com.ph"> used ph</a> |-->
                     <a href="#" class="about">about me</a> | 
                     <a href="https://blog.dev-engine.net">my blog</a> |
                     <a href="https://m.me/clark.galgo" target="_blank" class="msgr"><span class="fab fa-facebook-messenger"></span></a> |
