--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <li>LBC Over The Counter Payment (OTC)</li>
                     <li>Iristext &mdash; <em>https://www.iristext.com</em></li>
                     <li>Aces Jobs &mdash; <em>https://acesjobs.com.ph</em></li>
+                    <li>Shoppable &mdash; <em>https://business.shoppable.ph</em></li>
                 </ul>
                 <hr />
                 <h2>Employment</h2>
