--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="footer">
                     <!--<a href="https://used.com.ph"> used ph</a> |-->
                     <a href="#" class="about">about me</a> | 
-                    <a href="https://blog.dev-engine.net">my blog</a> |
+                    <a href="https://dev-engine.net">my blog</a> |
                     <a href="https://m.me/clark.galgo" target="_blank" class="msgr"><span class="fab fa-facebook-messenger"></span></a> |
                     <a href="https://fb.me/clark.galgo" class="fb"><span class="fab fa-facebook-square"></span></a> |
                     <a href="https://ph.linkedin.com/in/clarkgalgo" class="in"><span class="fab fa-linkedin"></span></a> | 
